@@ -2,6 +2,18 @@
 Python News
 +++++++++++
 
+What's New in Python 3.6.1 release candidate 1
+==============================================
+
+*Release date: XXXX-XX-XX*
+
+Core and Builtins
+-----------------
+
+Library
+-------
+
+
 What's New in Python 3.6.0 release candidate 1
 ==============================================
 
